welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:22: error: not found: value faireCroix
	faireCroix(Color.red);
        ^FlowerPot:24: error: not found: value faireCroix
	faireCroix(Color.cyan);
        ^