welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def growFlowers() {
	def marqueSol() {
		baisseBrosse();
		leveBrosse();
	}
	def faireFleur(c:Color) {
		setCouleurBrosse(c);
		baisseBrosse();
		avance(3);
		recule();
		gauche(); //placé pour l'autre ligne
		avance();
		recule();
		recule();
		avance();
		droite();//centré sur la croix
		setCouleurBrosse(Color.yellow);
		marqueSol();
	}

	faireCroix(Color.red);
	avance(3);
	faireCroix(Color.cyan);
}
